--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-    <img src="./Slide1.png" width="100%"></img>
+    <img src="Slide1.png" width="100%"></img>
     <hr style="width:100%;text-align:left;margin-left:0">
     <hr style="width:100%;text-align:left;margin-left:0">
     <hr style="width:100%;text-align:left;margin-left:0">
